force-app/main/default/objects/Progress_Report_Forms__c/Progress_Report_Forms__c.object-meta.xml
<CustomObject>
    <description>Grant Survey Responses</description>
    <label>Progress Report Email Request</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Progress Report Forms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Progress Report Email Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>