force-app/main/default/objects/Progress_Report_Forms__c/fields/Community_Investment__c.field-meta.xml
<CustomField>
    <fullName>Community_Investment__c</fullName>
    <label>Community Investment</label>
    <referenceTo>Community_Giving__c</referenceTo>
    <relationshipName>Progress_Report_Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>