force-app/main/default/objects/Progress_Report_Forms__c/fields/Date_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date sent</label>
    <type>Date</type>
</CustomField>