force-app/main/default/objects/Progress_Report_Forms__c/fields/To_Email__c.field-meta.xml
<CustomField>
    <fullName>To_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To Email</label>
    <type>Email</type>
</CustomField>